package  modelo.vo;

/**
 * Clase enum cos tipos de estado nos que pode estar unha conta
 */
public enum Estado {

	ACTIVO,
	SUSPENDIDO;
}