package modelo.vo.Produto;

import lombok.Data;

@Data
public class TipoBebida {
	/**
	 * Atributos de clase que representan os campos para a táboa na bbdd
	 */
	private int idTipoBebida;
	private String nomeTipoBebida;
}