package modelo.vo.Usuario;

import lombok.Data;

/**
 * Clase que representa aos clientes na aplicación. Extende de Usuario
 */
@Data
public class Cliente extends Usuario {


	public String buscarLocal() {
		// TODO - implement Cliente.buscarLocal
		throw new UnsupportedOperationException();
	}

	public void valorarLocal() {
		// TODO - implement Cliente.valorarLocal
		throw new UnsupportedOperationException();
	}

	public boolean autenticarse() {
		// TODO - implement Cliente.autenticarse
		throw new UnsupportedOperationException();
	}

	public void gardarFavoritos() {
		// TODO - implement Cliente.gardarFavoritos
		throw new UnsupportedOperationException();
	}

}