package modelo.vo.Usuario;

import lombok.Data;

/**
 * Clase que representa ao propietario. Extende de Usuario
 */
@Data
public class Propietario extends Usuario {


	public String accederInfoLocal() {
		// TODO - implement Propietario.accederInfoLocal
		throw new UnsupportedOperationException();
	}

	public void rexistrarLocal() {
		// TODO - implement Propietario.rexistrarLocal
		throw new UnsupportedOperationException();
	}

	public void eliminarLocal() {
		// TODO - implement Propietario.eliminarLocal
		throw new UnsupportedOperationException();
	}

	public void modificarDatos() {
		// TODO - implement Propietario.modificarDatos
		throw new UnsupportedOperationException();
	}

	public boolean autenticarse() {
		// TODO - implement Propietario.autenticarse
		throw new UnsupportedOperationException();
	}

}