@startuml
class Modelo.Loxica {
- Coordinador miCoordinador
+ {static} boolean modifica
+ void validarCreateUsuario(Usuario)
}
class ProxectoFInal1.Local {
- string nomeLocal
- TipoLocal tipo
- Produto especialidade
- Concello concello
- double rangoPrezos
- Horario idHorario
- Estado estado
- Carta carta
- int idLocal
- string rua
- int numero
- string telefono
- string email
+ Carta getCarta()
+ void setCarta(Carta)
+ void getNomeLocal()
+ void setNomeLocal(int)
+ void getTipo()
+ void setTipo(int)
+ void getEspecialidade()
+ void setEspecialidade(int)
+ void getDireccion()
+ void setDireccion(int)
+ void getConcello()
+ void setConcello(int)
+ void getRangoPrezos()
+ void setRangoPrezos(int)
+ void getIdHorario()
+ void setIdHorario(int)
+ void getEstado()
+ void setEstado(int)
+ void getIdLocal()
+ void setIdLocal(int)
+ void getRua()
+ void setRua(int)
+ void getNumero()
+ void setNumero(int)
+ void getTelefono()
+ void setTelefono(int)
+ void getEmail()
+ void setEmail(int)
}
class ProxectoFInal1.TipoCarta {
- int idTipoCarta
- string nomeTipoCarta
+ void getIdTipoCarta()
+ void setIdTipoCarta(int)
+ void getNomeTipoCarta()
+ void setNomeTipoCarta(int)
}
class Vistas.Xanelas.XanelaCliente {
- javax.swing.JPanel Bgcliente
- javax.swing.JLabel LabelBuscar
- javax.swing.JLabel LabelDatosCli
- javax.swing.JLabel LabelFav
- javax.swing.JLabel LabelIconoBuscar
- javax.swing.JLabel LabelIconoCli
- javax.swing.JLabel LabelIconoDatos
- javax.swing.JLabel LabelIconoFav
- javax.swing.JLabel LabelIconoMarcho
- javax.swing.JLabel LabelIconoSuperior
- javax.swing.JLabel LabelMarcho
- javax.swing.JLabel LabelSuperior
- javax.swing.JPanel PanelBuscar
- javax.swing.JPanel PanelBusquedaCli
- javax.swing.JPanel PanelCin
- javax.swing.JPanel PanelCuar
- javax.swing.JPanel PanelDatosCli
- javax.swing.JPanel PanelFav
- javax.swing.JPanel PanelFixo
- javax.swing.JPanel PanelInfoLo
- javax.swing.JPanel PanelLateral
- javax.swing.JPanel PanelMarcho
- javax.swing.JLabel PanelMesa
- javax.swing.JPanel PanelPri
- javax.swing.JPanel PanelPri1
- javax.swing.JPanel PanelPri2
- javax.swing.JPanel PanelSeg
- javax.swing.JPanel PanelSuperior
- javax.swing.JPanel PanelTer
- javax.swing.JTabbedPane TabInicial
- javax.swing.JTable TaboaInfoLo
- javax.swing.JButton jButton1
- javax.swing.JButton jButton2
- javax.swing.JButton jButton3
- javax.swing.JButton jButton4
- javax.swing.JButton jButton5
- javax.swing.JLabel jLabel1
- javax.swing.JLabel jLabel2
- javax.swing.JLabel jLabel3
- javax.swing.JLabel jLabel4
- javax.swing.JPanel jPanel1
- javax.swing.JPanel jPanel2
- javax.swing.JPanel jPanel3
- javax.swing.JPanel jPanel4
- javax.swing.JPanel jPanel6
- javax.swing.JPanel jPanel7
- javax.swing.JScrollPane jScrollPane1
- javax.swing.JSeparator jSeparator1
- javax.swing.JTextField jTextField1
- javax.swing.JLabel labelIconoConec
- javax.swing.JLabel labelconectado
- javax.swing.JLabel textPaBu
- void initComponents()
- void jButton4ActionPerformed(java.awt.event.ActionEvent)
- void jButton3ActionPerformed(java.awt.event.ActionEvent)
- void jButton1ActionPerformed(java.awt.event.ActionEvent)
- void jButton2ActionPerformed(java.awt.event.ActionEvent)
- void PanelMesaMouseClicked(java.awt.event.MouseEvent)
- void PanelBuscarMouseClicked(java.awt.event.MouseEvent)
- void PanelFavMouseClicked(java.awt.event.MouseEvent)
- void PanelDatosCliMouseClicked(java.awt.event.MouseEvent)
- void PanelMarchoMouseClicked(java.awt.event.MouseEvent)
- void LabelBuscarMouseEntered(java.awt.event.MouseEvent)
- void PanelFavMouseEntered(java.awt.event.MouseEvent)
- void PanelDatosCliMouseEntered(java.awt.event.MouseEvent)
- void PanelMarchoMouseEntered(java.awt.event.MouseEvent)
- void PanelFixoMouseEntered(java.awt.event.MouseEvent)
- void PanelFixoMouseClicked(java.awt.event.MouseEvent)
- void PanelFixoMouseExited(java.awt.event.MouseEvent)
- void PanelBuscarMouseExited(java.awt.event.MouseEvent)
- void PanelBuscarMouseEntered(java.awt.event.MouseEvent)
- void PanelFavMouseExited(java.awt.event.MouseEvent)
- void PanelDatosCliMouseExited(java.awt.event.MouseEvent)
- void PanelMarchoMouseExited(java.awt.event.MouseEvent)
- void LabelBuscarMouseClicked(java.awt.event.MouseEvent)
- void LabelFavMouseClicked(java.awt.event.MouseEvent)
- void LabelDatosCliMouseClicked(java.awt.event.MouseEvent)
- void PanelMesaMouseEntered(java.awt.event.MouseEvent)
- void PanelMesaMouseExited(java.awt.event.MouseEvent)
- void LabelFavMouseEntered(java.awt.event.MouseEvent)
- void LabelFavMouseExited(java.awt.event.MouseEvent)
- void LabelDatosCliMouseEntered(java.awt.event.MouseEvent)
- void LabelDatosCliMouseExited(java.awt.event.MouseEvent)
- void LabelBuscarMouseExited(java.awt.event.MouseEvent)
+ {static} void main(String[])
}
class ProxectoFInal1.Concello {
- int idConcello
- string nomeConcello
- int codigoPostal
+ void getIdConcello()
+ void setIdConcello(int)
+ void getNomeConcello()
+ void setNomeConcello(int)
+ void getCodigoPostal()
+ void setCodigoPostal(int)
}
class ProxectoFInal1.Carta {
- int idCarta
- EstacionAno epocaAno
- TipoCarta idTipoCarta
+ void getIdCarta()
+ void setIdCarta(int)
+ void getEpocaAno()
+ void setEpocaAno(int)
+ void getIdTipoCarta()
+ void setIdTipoCarta(int)
}
class Vistas.Xanelas.XanelaPropietario {
- javax.swing.JPanel Bgcliente
- javax.swing.JLabel LabelBuscar
- javax.swing.JLabel LabelDatosCli
- javax.swing.JLabel LabelFav
- javax.swing.JLabel LabelIconoBuscar
- javax.swing.JLabel LabelIconoCli
- javax.swing.JLabel LabelIconoDatos
- javax.swing.JLabel LabelIconoFav
- javax.swing.JLabel LabelIconoMarcho
- javax.swing.JLabel LabelIconoSuperior
- javax.swing.JLabel LabelMarcho
- javax.swing.JLabel LabelSuperior
- javax.swing.JPanel PanelBuscar
- javax.swing.JPanel PanelBusquedaCli
- javax.swing.JPanel PanelCin
- javax.swing.JPanel PanelCuar
- javax.swing.JPanel PanelDatosCli
- javax.swing.JPanel PanelFav
- javax.swing.JPanel PanelFixo
- javax.swing.JPanel PanelInfoLo
- javax.swing.JPanel PanelLateral
- javax.swing.JPanel PanelMarcho
- javax.swing.JLabel PanelMesa
- javax.swing.JPanel PanelPri
- javax.swing.JPanel PanelPri1
- javax.swing.JPanel PanelPri2
- javax.swing.JPanel PanelSeg
- javax.swing.JPanel PanelSuperior
- javax.swing.JPanel PanelTer
- javax.swing.JTabbedPane TabInicial
- javax.swing.JTable TaboaInfoLo
- javax.swing.JButton jButton1
- javax.swing.JButton jButton2
- javax.swing.JButton jButton3
- javax.swing.JButton jButton4
- javax.swing.JButton jButton5
- javax.swing.JLabel jLabel1
- javax.swing.JLabel jLabel2
- javax.swing.JLabel jLabel3
- javax.swing.JLabel jLabel4
- javax.swing.JPanel jPanel1
- javax.swing.JPanel jPanel2
- javax.swing.JPanel jPanel3
- javax.swing.JPanel jPanel4
- javax.swing.JPanel jPanel6
- javax.swing.JPanel jPanel7
- javax.swing.JScrollPane jScrollPane1
- javax.swing.JSeparator jSeparator1
- javax.swing.JTextField jTextField1
- javax.swing.JLabel labelIconoConec
- javax.swing.JLabel labelconectado
- javax.swing.JLabel textPaBu
- void initComponents()
- void jButton4ActionPerformed(java.awt.event.ActionEvent)
- void jButton3ActionPerformed(java.awt.event.ActionEvent)
- void jButton1ActionPerformed(java.awt.event.ActionEvent)
- void jButton2ActionPerformed(java.awt.event.ActionEvent)
- void PanelMesaMouseClicked(java.awt.event.MouseEvent)
- void PanelBuscarMouseClicked(java.awt.event.MouseEvent)
- void PanelFavMouseClicked(java.awt.event.MouseEvent)
- void PanelDatosCliMouseClicked(java.awt.event.MouseEvent)
- void PanelMarchoMouseClicked(java.awt.event.MouseEvent)
- void LabelBuscarMouseEntered(java.awt.event.MouseEvent)
- void PanelFavMouseEntered(java.awt.event.MouseEvent)
- void PanelDatosCliMouseEntered(java.awt.event.MouseEvent)
- void PanelMarchoMouseEntered(java.awt.event.MouseEvent)
- void PanelFixoMouseEntered(java.awt.event.MouseEvent)
- void PanelFixoMouseClicked(java.awt.event.MouseEvent)
- void PanelFixoMouseExited(java.awt.event.MouseEvent)
- void PanelBuscarMouseExited(java.awt.event.MouseEvent)
- void PanelBuscarMouseEntered(java.awt.event.MouseEvent)
- void PanelFavMouseExited(java.awt.event.MouseEvent)
- void PanelDatosCliMouseExited(java.awt.event.MouseEvent)
- void PanelMarchoMouseExited(java.awt.event.MouseEvent)
- void LabelBuscarMouseClicked(java.awt.event.MouseEvent)
- void LabelFavMouseClicked(java.awt.event.MouseEvent)
- void LabelDatosCliMouseClicked(java.awt.event.MouseEvent)
- void PanelMesaMouseEntered(java.awt.event.MouseEvent)
- void PanelMesaMouseExited(java.awt.event.MouseEvent)
- void LabelFavMouseEntered(java.awt.event.MouseEvent)
- void LabelFavMouseExited(java.awt.event.MouseEvent)
- void LabelDatosCliMouseEntered(java.awt.event.MouseEvent)
- void LabelDatosCliMouseExited(java.awt.event.MouseEvent)
- void LabelBuscarMouseExited(java.awt.event.MouseEvent)
+ {static} void main(String[])
}
class ProxectoFInal1.Bebida {
- TipoBebida tipo
- string fabricante
- TipoBebida idBebida
+ void getTipo()
+ void setTipo(int)
+ void getFabricante()
+ void setFabricante(int)
+ void getIdBebida()
+ void setIdBebida(int)
}
class Vistas.Xanelas.PanelTaboaRe {
- void initComponents()
}
class ProxectoFInal1.TipoLocal {
- int idTipoLocal
- string nomeTipo
+ void getIdTipoLocal()
+ void setIdTipoLocal(int)
+ void getNomeTipo()
+ void setNomeTipo(int)
}
abstract class Modelo.vo.Usuario {
- String nome
- String apelidos
- String apelido2
- int idade
- String datadeNacemento
- char sexo
- String contrasinal
- String rua
- int numero
- String telefono
- String email
- int idUsuario
+ void getNome()
+ void setNome(int)
+ void getApelidos()
+ void setApelidos(int)
+ void getApelido2()
+ void setApelido2(int)
+ void getIdade()
+ void setIdade(int)
+ void getDatadeNacemento()
+ void setDatadeNacemento(int)
+ void getSexo()
+ void setSexo(int)
+ void getConcello()
+ void setConcello(int)
+ void getContrasinal()
+ void setContrasinal(int)
+ void getEstado()
+ void setEstado(int)
+ void getRua()
+ void setRua(int)
+ void getNumero()
+ void setNumero(int)
+ void getTelefono()
+ void setTelefono(int)
+ void getEmail()
+ void setEmail(int)
+ void getIdUsuario()
+ void setIdUsuario(int)
}
class ProxectoFInal1.UsuarioNonSocio {
+ void altaUsuario()
+ string buscaLocal()
}
class Modelo.Conexion.Conexion {
~ {static} String bd
~ {static} String login
~ {static} String password
~ {static} String url
~ Connection conn
+ Connection getConnection()
+ void desconectar()
}
class ProxectoFInal1.Propietario {
- Usuario idPropietario
+ void getIdPropietario()
+ void setIdPropietario(int)
+ string accederInfoLocal()
+ void rexistrarLocal()
+ void eliminarLocal()
+ void modificarDatos()
+ boolean autenticarse()
}
class Modelo.Dao.UsuarioDAO {
+ void create(ProxectoFInal.Usuario)
+ List read()
+ List<Usuario> findById(Usuario)
+ void update(Usuario)
+ void delete(Usuario)
}
class ProxectoFInal1.Cliente {
- Usuario idUsuario
+ void getIdUsuario()
+ void setIdUsuario(int)
+ string buscarLocal()
+ void valorarLocal()
+ boolean autenticarse()
+ void gardarFavoritos()
}
class ProxectoFInal1.Prato {
- int idPrato
+ void getIdPrato()
+ void setIdPrato(int)
}
class Vistas.Xanelas.Xanela1 {
+ int xMouse
- javax.swing.JPanel BarraSuperior
- javax.swing.JPasswordField ContrasinalText
- javax.swing.JLabel LabelContra
- javax.swing.JLabel LabelInicioSesion
- javax.swing.JLabel LabelUsuario
- javax.swing.JPanel PanelBtnInicio
- javax.swing.JPanel PanelBtnRexistro
- javax.swing.JPanel PanelBuscador
- javax.swing.JPanel PanelCorpo
- javax.swing.JPanel PanelInicioRexistro
- javax.swing.JTextField UsuarioText
- javax.swing.JPanel bg
- java.awt.Label btnInicioSesion
- java.awt.Label btnRexistro
- java.awt.Label btnSaida
- javax.swing.ButtonGroup buttonGroup1
- javax.swing.JLabel infoText
- javax.swing.JSeparator jSeparator1
- javax.swing.JSeparator jSeparator2
- void initComponents()
- void UsuarioTextActionPerformed(java.awt.event.ActionEvent)
- void BarraSuperiorMousePressed(java.awt.event.MouseEvent)
- void BarraSuperiorMouseDragged(java.awt.event.MouseEvent)
- void btnSaidaMouseClicked(java.awt.event.MouseEvent)
- void btnSaidaMouseEntered(java.awt.event.MouseEvent)
- void btnSaidaMouseExited(java.awt.event.MouseEvent)
- void PanelBtnRexistroMouseEntered(java.awt.event.MouseEvent)
- void btnInicioSesionMouseClicked(java.awt.event.MouseEvent)
- void btnInicioSesionMouseEntered(java.awt.event.MouseEvent)
- void btnInicioSesionMouseExited(java.awt.event.MouseEvent)
- void btnRexistroMouseClicked(java.awt.event.MouseEvent)
- void btnRexistroMouseEntered(java.awt.event.MouseEvent)
- void btnRexistroMouseExited(java.awt.event.MouseEvent)
+ {static} void main(String[])
}
class Vistas.Xanelas.Busqueda {
- javax.swing.JButton jButton2
- javax.swing.JComboBox<String> jComboBox1
- javax.swing.JComboBox<String> jComboBox2
- javax.swing.JComboBox<String> jComboBox3
- javax.swing.JLabel jLabel1
- javax.swing.JLabel jLabel2
- javax.swing.JLabel jLabel3
- void initComponents()
}
class ProxectoFInal1.Estado {
- int idEstado
- string nomeEstado
+ void getIdEstado()
+ void setIdEstado(int)
+ void getNomeEstado()
+ void setNomeEstado(int)
}
abstract class ProxectoFInal1.Ingrediente {
- int idIngrediente
- string nomeIngrediente
+ void getIdIngrediente()
+ void setIdIngrediente(int)
+ void getNomeIngrediente()
+ void setNomeIngrediente(int)
}
class Vistas.Xanelas.DialogoRexistro {
~ int xMouse
- Loxica miLoxica
- javax.swing.JComboBox<String> ComboRol
- javax.swing.JPanel PanelEixe
- javax.swing.JTextField TextApelido
- javax.swing.JTextField TextApelido2
- javax.swing.JTextField TextConcello
- javax.swing.JTextField TextEmail
- javax.swing.JTextField TextNome
- javax.swing.JTextField TextNum
- javax.swing.JTextField TextRua
- javax.swing.JTextField TextTelf
- java.awt.Label btnAceptar
- java.awt.Label btnCancelar
- javax.swing.JLabel jLabel1
- javax.swing.JLabel jLabel10
- javax.swing.JLabel jLabel2
- javax.swing.JLabel jLabel3
- javax.swing.JLabel jLabel4
- javax.swing.JLabel jLabel5
- javax.swing.JLabel jLabel6
- javax.swing.JLabel jLabel7
- javax.swing.JLabel jLabel8
- javax.swing.JLabel jLabel9
- javax.swing.JPanel jPanel1
- javax.swing.JPanel jPanel2
- javax.swing.JPanel jPanel4
- javax.swing.JPanel jPanel5
- javax.swing.JTextField jTextField9
- void initComponents()
- void btnCancelarMouseEntered(java.awt.event.MouseEvent)
- void btnCancelarMouseExited(java.awt.event.MouseEvent)
- void btnAceptarMouseEntered(java.awt.event.MouseEvent)
- void btnAceptarMouseExited(java.awt.event.MouseEvent)
- void PanelEixeMousePressed(java.awt.event.MouseEvent)
- void PanelEixeMouseDragged(java.awt.event.MouseEvent)
- void btnCancelarMouseClicked(java.awt.event.MouseEvent)
- void btnAceptarMouseClicked(java.awt.event.MouseEvent)
+ {static} void main(String[])
}
class Controlador.Coordinador {
- Loxica miLoxica
- DialogoRexistro dialogoRexistro
}
interface Modelo.Dao.InterfazUsuario {
~ void create(T)
~ List<T> read()
~ List<T> findById(T)
~ void update(T)
~ void delete(T)
}
class ProxectoFInal1.TipoBebida {
- int idTipoBebida
- string nomeTipoBebida
+ void getIdTipoBebida()
+ void setIdTipoBebida(int)
+ void getNomeTipoBebida()
+ void setNomeTipoBebida(int)
}
class Vistas.Xanelas.MenuLateralCliente {
- javax.swing.JLabel jLabel2
- javax.swing.JPanel jPanel1
- javax.swing.JPanel jPanel2
- javax.swing.JPanel jPanel3
- javax.swing.JPanel jPanel4
- javax.swing.JPanel jPanel5
- javax.swing.JSeparator jSeparator1
- void initComponents()
}
class ProxectoFInal1.PropietarioNonSocio {
+ void altaPropietario()
}
abstract class ProxectoFInal1.Produto {
- int id
- string nome
- double prezo
- boolean especialidade
+ void getId()
+ void setId(int)
+ void getNome()
+ void setNome(int)
+ void getPrezo()
+ void setPrezo(int)
+ void getEspecialidade()
+ void setEspecialidade(int)
}
class ProxectoFInal1.Horario {
- int horaApertura
- int horaPeche
- string diaPeche
- int idHorario
+ void getHoraApertura()
+ void setHoraApertura(int)
+ void getHoraPeche()
+ void setHoraPeche(int)
+ void getDiaPeche()
+ void setDiaPeche(int)
+ void getIdHorario()
+ void setIdHorario(int)
}


Vistas.Xanelas.JFrame <|-- Vistas.Xanelas.XanelaCliente
Vistas.Xanelas.JFrame <|-- Vistas.Xanelas.XanelaPropietario
ProxectoFInal1.Produto <|-- ProxectoFInal1.Bebida
Vistas.Xanelas.JPanel <|-- Vistas.Xanelas.PanelTaboaRe
ProxectoFInal1.Usuario <|-- ProxectoFInal1.Propietario
Modelo.Dao.InterfazUsuario <|.. Modelo.Dao.UsuarioDAO
ProxectoFInal1.Usuario <|-- ProxectoFInal1.Cliente
ProxectoFInal1.Produto <|-- ProxectoFInal1.Prato
Vistas.Xanelas.JFrame <|-- Vistas.Xanelas.Xanela1
Vistas.Xanelas.JPanel <|-- Vistas.Xanelas.Busqueda
Vistas.Xanelas.JDialog <|-- Vistas.Xanelas.DialogoRexistro
Vistas.Xanelas.JPanel <|-- Vistas.Xanelas.MenuLateralCliente
@enduml